# human-presentator

./: README.md  docker-compose.yml  main.py  pyproject.toml
documentation/: .gitignore  Makefile  main.tex
documentation/images/: architecture.mmd
documentation/misc/: acronyms.tex  appendix.tex  frontmatter.tex  settings.tex  titlepage.tex
documentation/sec/: discussion.tex  introduction.tex  methodology.tex  results.tex
human-presentor-doc/: main.tex
memo-api/: .gitignore  Dockerfile  main.py  pyproject.toml
memo-api/src/controller/: memo_controller.py
memo-api/src/service/: memo_service.py
presentation/: index.html  package-lock.json  package.json  slides.md  style.css
presentation/components/: Footer.vue  Hyperspace.vue  Timeline.vue  VRAMChart.vue  VRAMChartConfig.ts
presentation/pages/: 0header.md  1-5timeline.md  4endcard.md  ai-video.md  architecture.md  livedemo.md  memo.md  vram-survey.md  zonos-hatsune.md
presentation/setup/: shiki.ts
presentation/static/: veo_will_spagett.webm
presentator/: main.py  pyproject.toml
presentor-vue/: .env  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
presentor-vue/src/: App.vue
presentor-vue/src/components/: MemoGenerator.vue  ZonosGenerator.vue
zonos-api/: .gitignore  Dockerfile  main.py  pyproject.toml
zonos-api/src/controller/: zonos_controller.py
zonos-api/src/models/: zonos_model.py
zonos-api/src/service/: zonos_service.py
