[project]
name = "memo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "memo",
    "uvicorn>=0.34.3",
]

[tool.uv.sources]
memo = { git = "https://github.com/mitsaucepls/memo.git" }
